# rng_contest_bot

./: Cargo.toml  example_details.json
src/: main.rs
