[package]
name = "rng_contest_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = {version = "0.10.10", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "unstable_discord_api"]}
tokio = {version = "1.17.0", features = ["macros", "rt-multi-thread"]}
serde = {version = "1.0.136", features = ["derive"]}
serde_json = "1.0.79"