[package]
name = "rng_contest_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = {version = "0.11.2", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "unstable_discord_api"]}
tokio = {version = "1.18.1", features = ["macros", "rt-multi-thread"]}
serde = {version = "1.0.137", features = ["derive"]}
serde_json = "1.0.81"